force-app/main/default/objects/Order/fields/Amount_Payable__c.field-meta.xml
<CustomField>
    <fullName>Amount_Payable__c</fullName>
    <label>Amount Payable</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>The real final amount the customer must pay for this order: Taxable_Amount__c + CGST_Amount__c/SGST_Amount__c/IGST_Amount__c − loyalty points redeemed. This is what Payment__c.Amount__c is set to and what PaymentService validates/caps payments against (falling back to standard TotalAmount when this is blank, e.g. an Order created outside the website checkout flow). Standard TotalAmount alone is only ever the raw, undiscounted, pre-tax product line sum and is never the correct charge amount once discount/GST/loyalty exist. See Feature Expansion Plan §1/§2/§3.</description>
</CustomField>