force-app/main/default/objects/Order/fields/CGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>CGST_Amount__c</fullName>
    <label>CGST Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Set only when the Order's shipping state matches the seller's registered state (intrastate). Blank when IGST_Amount__c is set instead.</description>
</CustomField>