force-app/main/default/objects/Order/fields/Coupon_Code_Applied__c.field-meta.xml
<CustomField>
    <fullName>Coupon_Code_Applied__c</fullName>
    <label>Coupon Code Applied</label>
    <length>30</length>
    <type>Text</type>
    <description>Display convenience — the coupon code text applied to this order, if any, without having to traverse the CampaignMember redemption row. Blank when no coupon was used.</description>
</CustomField>