force-app/main/default/objects/Order/fields/Customer_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Name__c</fullName>
    <label>Customer Name</label>
    <length>120</length>
    <type>Text</type>
    <description>The name of the shopper who actually placed this order (the logged-in customer at checkout — see techBasketPayment.js), set once when the order is created and never changed afterward. Distinct from Account Name, which is shared across every order for that email and gets renamed to whoever most recently checked out under it (see CheckoutController STEP 2.5) — this field is the immutable per-order record of who placed it.</description>
</CustomField>