force-app/main/default/objects/Order/fields/Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>Discount_Amount__c</fullName>
    <label>Discount Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Total discount applied to this order — coupon redemption (see Feature Expansion Plan §1) and/or loyalty points (§2). Subtracted from the product subtotal before the amount charged/verified.</description>
</CustomField>