force-app/main/default/objects/Order/fields/IGST_Amount__c.field-meta.xml
<CustomField>
    <fullName>IGST_Amount__c</fullName>
    <label>IGST Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Set only when the Order's shipping state differs from the seller's registered state (interstate). Blank when CGST_Amount__c/SGST_Amount__c are set instead.</description>
</CustomField>