force-app/main/default/objects/Order/fields/Placed_By__c.field-meta.xml
<CustomField>
    <fullName>Placed_By__c</fullName>
    <label>Placed By</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Orders Placed</relationshipLabel>
    <relationshipName>Orders_Placed</relationshipName>
    <type>Lookup</type>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The logged-in Account (Customer Account Detail record type) that actually submitted this order — never changes based on who it's for. Distinct from the standard AccountId field, which represents who the order is for/shipped to. See Feature Expansion Plan §5.</description>
</CustomField>