force-app/main/default/objects/Order/fields/Points_Earned__c.field-meta.xml
<CustomField>
    <fullName>Points_Earned__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points Earned</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Loyalty points earned from this order, set once by LoyaltyService the moment Order_Tracking__c.Delivery_Status__c reaches Delivered (1 point per ₹1,000 of Taxable_Amount__c, whole-thousand rule) — never awarded earlier, since payment can still fail or the order can still be cancelled before then. See Feature Expansion Plan §2.3.</description>
</CustomField>