force-app/main/default/objects/Order/fields/Points_Redeemed__c.field-meta.xml
<CustomField>
    <fullName>Points_Redeemed__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Points Redeemed</label>
    <precision>8</precision>
    <scale>0</scale>
    <type>Number</type>
    <description>Loyalty points redeemed against this order at checkout (1 point = ₹1). Used by OrderTrackingService to restore points to the customer's balance if the order is cancelled before delivery. See Feature Expansion Plan §2.6.</description>
</CustomField>