force-app/main/default/objects/Order/fields/Recipient_Name__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Name__c</fullName>
    <label>Recipient Name</label>
    <length>120</length>
    <type>Text</type>
    <description>The name of the person this order is being delivered to, typed into the Shipping step at checkout. Distinct from Customer_Name__c/Placed_By__c, which are the logged-in buyer — the buyer can order for someone else (a gift, a family member) without that recipient gaining any access to the buyer's account. See Feature Expansion Plan §5.</description>
</CustomField>