force-app/main/default/objects/Order/fields/Recipient_Phone__c.field-meta.xml
<CustomField>
    <fullName>Recipient_Phone__c</fullName>
    <label>Recipient Phone</label>
    <length>40</length>
    <type>Text</type>
    <description>Phone number of the delivery recipient, typed into the Shipping step at checkout. See Recipient_Name__c.</description>
</CustomField>