force-app/main/default/objects/Order/fields/Shipping_Cost__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Cost__c</fullName>
    <description>Cost of the delivery method the shopper picked at checkout (Standard/Express/Overnight — see OrderPricingService.SHIPPING_METHODS), added to Amount_Payable__c. Server-computed from the chosen method&apos;s id, never trusted from the client.</description>
    <label>Shipping Cost</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>