force-app/main/default/objects/Order/fields/Shipping_Method__c.field-meta.xml
<CustomField>
    <fullName>Shipping_Method__c</fullName>
    <description>Display name of the delivery method the shopper picked at checkout (e.g. &quot;Express Delivery&quot;), stored for reference alongside Shipping_Cost__c.</description>
    <label>Shipping Method</label>
    <length>60</length>
    <type>Text</type>
</CustomField>