force-app/main/default/objects/Order/fields/Taxable_Amount__c.field-meta.xml
<CustomField>
    <fullName>Taxable_Amount__c</fullName>
    <label>Taxable Amount</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Currency</type>
    <description>Subtotal minus Discount_Amount__c, before GST. See Feature Expansion Plan §3.</description>
</CustomField>